--- a/lib/dedalo/component_date/html/component_date_search.phtml
+++ b/lib/dedalo/component_date/html/component_date_search.phtml
@@ -1,8 +1,9 @@
 <?php
 
-	# VISUALIZADOR HTML	
+	# VISUALIZADOR HTML
 
 	print "<div class=\"wrap_component css_wrap_date tooltip_active\" id=\"wrap_{$tipo}\" ";
+	print "data-tipo=\"{$tipo}\" ";
 	print "data-mode=\"$date_mode\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-modo=\"{$modo}\" ";
@@ -12,15 +13,15 @@
 
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);
-	
+
 	# CONTENIDO (INPUT)
 	$html_content = '';
 	switch(true) {
-			
+
 		case $permissions===0:
 				$html_content .= "";
 				break;
-						
+
 		case ($permissions>=1):
 
 				// q_operator
@@ -31,17 +32,17 @@
 				// input date
 					$html_content .= '<ul>';
 					foreach ((array)$ar_dato as $key => $current_dato) {
-						
+
 						$html_content .= '<li>';
-						
-						// value 
+
+						// value
 							$value = isset($valor_start[$key]) ? $valor_start[$key] : '';
 							// If operator exists prepend to value (search values)
 							//if (isset($current_dato->start->op)) {
 							//	$value = $current_dato->start->op . $value;
 							//}
-					
-						// role 
+
+						// role
 							switch ($date_mode) {
 								case 'range':
 									$role = 'range_start';
@@ -67,7 +68,7 @@
 
 						$html_content .= " <span class=\"css_span_ejemplo\">Format $ejemplo</span>";
 
-					
+
 						$html_content .= '</li>';
 					}//end foreach ($ar_dato as $key => $current_dato)
 					$html_content .= '</ul>';
@@ -81,17 +82,17 @@
 						$init_options->wrapper_id 		= $id_wrapper;
 					$html_content .= 'component_common.init('.json_encode($init_options).');';
 					$html_content .= '</script>';
-				break;				
+				break;
 	}
-	
+
 	# Prepare content to show in page
 	tools::prepare_content($html_content);
 
 	# PRINT HTML
 	print $html_label;
 	print $html_content;
-	
-	
+
+
 	print '</div>'; //wrap
 
 
