--- a/lib/dedalo/component_input_text/html/component_input_text_search.phtml
+++ b/lib/dedalo/component_input_text/html/component_input_text_search.phtml
@@ -1,17 +1,18 @@
 <?php
 
-	# VIEW HTML	
+	# VIEW HTML
 
 	print "<div class=\"wrap_component css_wrap_input_text tooltip_active\" id=\"wrap_{$tipo}\" ";
+	print "data-tipo=\"{$tipo}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";
 	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
 	print ">";
-	
+
 	# LABEL
 	$html_label = component_common_draw::draw_label($this);
-	
+
 	# CONTENT
 	$html_content = '';
 	switch(true) {
@@ -20,12 +21,12 @@
 			# COMPARISON OPERATORS
 			#$html_content .= operator::get_search_comparison_operators_html($tipo,$ar_comparison_operators);
 
-			# INPUT 
+			# INPUT
 			#$html_content .= "<span id=\"search_component_$tipo\">";
 
-			$html_content .= "<ul>";			
+			$html_content .= "<ul>";
 			foreach ((array)$dato as $key => $value) {
-				
+
 				$html_content .= "<li>";
 
 					$html_content .= "<input class=\"css_input_text_search\" type=\"text\" ";
@@ -38,12 +39,12 @@
 				$html_content .= "</li>";
 			}
 			$html_content .= "</ul>";
-			
+
 			#$html_content .= "</span>";
 
 			# LOGICAL OPERATORS
 			#$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
-			
+
 			if(SHOW_DEBUG===true) {
 				$html_content .= "<span class=\"debug_info\">$search_input_name</span>";
 			}
@@ -52,16 +53,16 @@
 			$html_content .= label::get_label("sin_acceso");
 			break;
 	}//end switch($permissions)
-					
+
 
 	# Prepare content to show in page
 	tools::prepare_content($html_content);
-	
-	
+
+
 	# PRINT HTML
 	print $html_label;
 	print $html_content;
-	
-	
+
+
 	print "</div>"; //wrap
 ?>
