Fix search_development2 'build_having' issues

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -647,7 +647,7 @@
 						background-color: #3379b8;
 					}
 					.search_group > .operator.or_link {
-						background-color: #E96400;
+						background-color: #ec1919;
 					}
 				#root_search_group {
 					margin: 0;
@@ -979,4 +979,16 @@
 			margin-left: 3px;
 			cursor: pointer;
 		}
+
+
+
+// duplicate tipo
+	.duplicate_tipo {
+		//background-color: #FD4828;
+		border: 2px dashed #fd0000 !important;
+	}
+
+
+
+
 
