change the events of blur focus by focusin focusout

--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -74,7 +74,7 @@ html {
 		height: 0;
 	}
 // hidden
-	.hidden2 {
+	.hidden {
 		visibility: hidden;
 		//opacity: 0 !important;
 		//height: 0px !important;
