Fix search csss issues

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -328,6 +328,13 @@
 				}//end .search_buttons_container
 
 			}//end .search_group_container
+
+			// root search_group
+			>.search_group_container:first-of-type >.search_group {
+				>.button.add {
+					top: 0;
+				}
+			}
 		}
 
 		// Right user presets
