--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -370,9 +370,9 @@
 				.fa-icon;
 				.fas;
 				&:before {
-					content: @fa-var-times-circle; 
+					content: @fa-var-times-circle;
 				}
-			}					
+			}
 		}//end .active &, &.link
 	}//end .button
 
@@ -405,7 +405,7 @@
 					width: 3em;
 					text-align: center;
 				}
-				
+
 			}
 
 			&.inputs_container >li {
@@ -423,8 +423,12 @@
 
 
 // input focus show next item (button remove)
-	input:focus + .display_none.remove {
-		.display_block;
+	input:focus  {
+
+		& + .display_none.remove {
+			.display_block;
+		}
+
 	}
 	.display_block {
 		display: block !important;
