Add no_records css class

--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -1,5 +1,5 @@
 
-	
+
 
 html {
 	.global_font;
@@ -60,7 +60,7 @@ html {
 	    22% { width: 100%; opacity: 1; }
 	    60% { width: 100%; opacity: 1; }
 	    100%{ width: 100%; opacity: 0; }
-	}	
+	}
 // loading
 	.loading {
 		opacity: 0.4;
@@ -82,7 +82,7 @@ html {
 	}
 // display_none
 	.display_none {
-		display: none !important;		
+		display: none !important;
 	}
 // debug
 	.debug {
@@ -107,9 +107,9 @@ html {
 	}
 
 // temporal debug css
-	section {		
-		font-size: 1em;				
-	}	
+	section {
+		font-size: 1em;
+	}
 
 
 
@@ -121,7 +121,17 @@ html {
 		padding-right: 10px;
 		background-color: rgba(129,129,129,0.8);
 		color: #fff !important;
-		width: 10%;			
+		width: 10%;
 	}
 	.css_email_error { background-color:red;}
 	.css_email_error:hover { background-color:orange;}
+
+
+
+// no_records
+	.no_records {
+		padding: 1em;
+		font-size: 1em;
+		color: #fd7600;
+	}
+
