--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -423,18 +423,14 @@
 
 
 // input focus show next item (button remove)
-	input:focus  {
-
-		& + .display_none.remove {
+	input:focus ~ .display_none.remove {
 			.display_block;
-		}
-
 	}
+
+	input:focus  ~ .display_none.email_send {
+			.display_block;
+	}
+
 	.display_block {
 		display: block !important;
 	}
-
-
-
-
-
