Added css to set link button icon.

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -373,6 +373,13 @@
 					content: @fa-var-times-circle;
 				}
 			}
+			&.go_iri {
+				.fa-icon;
+				.fas;
+				&:before {
+					content: @fa-var-link;
+				}
+			}
 		}//end .active &, &.link
 	}//end .button
 
